# gturf

./: .gitignore  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  gturf_ui_helpers.py  pyproject.toml  requirements-app.txt  requirements.txt
.github/workflows/: ci.yml
examples/: example_run.py
gturf/: __init__.py  cli.py  config.py  figures.py  ga.py  hcv.py  io_utils.py  pipeline.py  sensitivity.py  statistics.py  turf.py
scripts/: run_pipeline.py  run_sensitivity.py  run_statistics.py
tests/: test_smoke.py
