[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gturf"
version = "1.0.0"
description = "Optimising skill subset selection via TURF analysis and genetic algorithms (G-TURF)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Konstantinos Georgiou" },
    { name = "Nikolaos Mittas" },
    { name = "Lefteris Angelis" },
]
keywords = ["TURF", "genetic algorithm", "ESCO", "skills", "labour market", "HCV"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.9",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
parquet = ["pyarrow>=10.0"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/KostasGeor/gturf"
Repository = "https://github.com/KostasGeor/gturf"

[project.scripts]
gturf-run = "gturf.cli:pipeline_main"
gturf-sensitivity = "gturf.cli:sensitivity_main"
gturf-statistics = "gturf.cli:statistics_main"

[tool.setuptools]
packages = ["gturf"]
